--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,9 +3,9 @@
     "short_name": "wxrdle",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#121213",
+    "theme_color": "#121213",
+    "description": "Wordle with steroid.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
