--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.3.0
-  hive: ^2.0.6
-  hive_flutter: ^1.1.0
   audioplayers: ^6.4.0
   badges: ^3.1.2
   flutter_dotenv: ^5.2.1
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.2.0
 
 dev_dependencies:
   flutter_test:
