--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+20251108
 
 environment:
   sdk: ">=2.17.0-69.2.beta <3.0.0"
@@ -37,7 +37,7 @@ dependencies:
   http: ^1.3.0
   audioplayers: ^6.4.0
   badges: ^3.1.2
-  flutter_dotenv: ^5.2.1
+  flutter_dotenv: ^6.0.0
   hive_ce: ^2.10.1
   hive_ce_flutter: ^2.2.0
 
@@ -50,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
